# keyroost

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SECURITY.md  TODO-hardening.md  TODO-v0.7.5.md
.cargo/: audit.toml
.claude/hooks/: guard.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  linux-bundles.yml  pages.yml  publish.yml  release.yml
crates/keyroost/: Cargo.toml
crates/keyroost-ctap/: Cargo.toml
crates/keyroost-ctap/src/: bio_enroll.rs  client_pin.rs  cmd.rs  config.rs  hid.rs  large_blobs.rs  lib.rs  pin.rs  ssh_cert.rs
crates/keyroost-import/: Cargo.toml
crates/keyroost-import/src/: otpauth.rs
crates/keyroost-keyring/src/: lib.rs
crates/keyroost-oath/: Cargo.toml
crates/keyroost-openpgp/: Cargo.toml
crates/keyroost-openpgp/src/: lib.rs
crates/keyroost-piv/: Cargo.toml
crates/keyroost-piv/src/: lib.rs  x509_parse.rs
crates/keyroost-piv/tests/: x509_parse_kat.rs
crates/keyroost-piv/tests/fixtures/: ec_test.der  leaf_signed.der  rsa_piv.der  unknown_oid.der
crates/keyroost-proto/src/: commands.rs  lib.rs
crates/keyroost-proto/tests/: public_data_kat.rs
crates/keyroost-qr/: Cargo.toml
crates/keyroost-qr/src/: lib.rs
crates/keyroost-resolve/: Cargo.toml
crates/keyroost-resolve/src/: device.rs  lib.rs
crates/keyroost-screengrab/: Cargo.toml
crates/keyroost-screengrab/src/: lib.rs
crates/keyroost-token2otp/: Cargo.toml
crates/keyroost-token2otp/src/: crypto.rs  entry.rs  hidframe.rs  lib.rs
crates/keyroost-token2prog/: Cargo.toml
crates/keyroost-token2prog/src/: commands.rs  lib.rs
crates/keyroost-transport/: Cargo.toml
crates/keyroost-transport/src/: ctap_pcsc.rs  lib.rs  oath.rs  openpgp.rs  piv.rs  token2otp.rs  token2prog.rs
crates/keyroost-winwebauthn/: Cargo.toml
crates/keyroost-winwebauthn/src/: sys.rs
crates/keyroost/assets/: mds_data.json
crates/keyroost/src/: main.rs  otp_pane.rs  qrscan.rs  screengrab.rs
crates/keyroost/src/ui/: aaguid.rs  device.rs  help.rs  mds.rs  mod.rs  theme.rs
crates/keyroostctl/: Cargo.toml
crates/keyroostctl/src/: main.rs  overview.rs
crates/keyroostctl/tests/: broken_pipe.rs
crates/molto2-ctap/src/: client_pin.rs  cred_mgmt.rs  lib.rs
crates/molto2-hid/: Cargo.toml
crates/molto2-hid/src/: lib.rs
crates/molto2-import/: Cargo.toml
crates/molto2-import/src/: bulk.rs  encrypted.rs  lib.rs
crates/molto2-import/tests/: aegis_encrypted_roundtrip.rs
crates/molto2-openpgp/: Cargo.toml
crates/molto2-openpgp/src/: lib.rs
crates/molto2-proto/src/: commands.rs  lib.rs  sha256.rs
crates/moltoctl/: Cargo.toml
crates/moltoctl/src/: main.rs
crates/moltoui/: Cargo.toml
crates/moltoui/src/: main.rs
docs/: BRINGUP.md  DEVICE-RESEARCH.md  PROTOCOL-token2prog.md  PROTOCOL.md  fido2.html  fingerprint.html  index.html  mds.html  molto2.html  naming.html  oath.html  openpgp.html  otp.html  piv.html  reset.html  security-keys.html  settings.html  storage.html
docs/assets/: site.css
docs/superpowers/plans/: 2026-07-01-largeblob-legibility.md  2026-07-02-molto2-slot-overview.md
docs/superpowers/specs/: 2026-06-30-largeblob-storage-roadmap-design.md  2026-07-03-molto2-slot-overview-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bulk_import.rs  cbor.rs  codec.rs  oath_parse.rs  openpgp_parse.rs  otpauth.rs  piv_parse.rs
packaging/: LINUX-BUNDLES.md
packaging/appimage/: AppRun.preflight  build-appimage.sh
packaging/flatpak/: io.github.framefilter.keyroost.metainfo.xml  io.github.framefilter.keyroost.yml
packaging/icons/: README.md
packaging/winget/: Framefilter.Keyroost.installer.yaml
tools/: gen_mds_data.py
udev/: 70-keyroost-fido.rules  70-moltoui-fido.rules
