[workspace]
resolver = "2"
members = [
    "crates/molto2-proto",
    "crates/molto2-transport",
    "crates/molto2-hid",
    "crates/molto2-ctap",
    "crates/molto2-keyring",
    "crates/molto2-resolve",
    "crates/molto2-oath",
    "crates/molto2-openpgp",
    "crates/molto2-import",
    "crates/moltoctl",
    "crates/moltoui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/framefilter/moltoui"

[workspace.lints.rust]
unsafe_code = "forbid"
