[package]
name = "keyroost-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "otpauth:// URI parsing and bulk-import helpers for Molto2 programming."

[lints]
workspace = true

[features]
default = []
# Adds Aegis / 2FAS / Authy JSON parsers (pulls in serde + serde_json).
bulk = ["dep:serde", "dep:serde_json"]
# Adds Aegis encrypted-vault decryption (pulls in scrypt + aes-gcm + base64).
# Implies `bulk`.
encrypted = ["bulk", "dep:scrypt", "dep:aes-gcm", "dep:base64"]

[dependencies]
keyroost-proto = { path = "../keyroost-proto", version = "0.5.0" }
# Same scoped exception as keyroost-ctap/keyroost-rsakey: compiler-fence-
# backed wiping of secret buffers is not something to hand-roll.
zeroize = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
scrypt = { version = "0.11", default-features = false, features = ["std"], optional = true }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"], optional = true }
base64 = { version = "0.22", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
# Self-dependency turning on every feature for `cargo test -p keyroost-import`,
# so the bulk + encrypted suites run without relying on workspace feature
# unification from keyroostctl.
keyroost-import = { path = ".", features = ["encrypted"] }
