[package]
name = "keyroost-piv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust PIV (NIST SP 800-73 / FIPS 201) smartcard byte layer (APDU + BER-TLV)."

[lints]
workspace = true

[dependencies]
keyroost-proto = { path = "../keyroost-proto", version = "0.5.0" }
