[package]
name = "keyroost-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PC/SC transport for the Token2 Molto2 / Molto2v2 programmable TOTP token."

[lints]
workspace = true

[dependencies]
keyroost-proto = { path = "../keyroost-proto", version = "0.7.2" }
keyroost-oath = { path = "../keyroost-oath", version = "0.7.2" }
keyroost-openpgp = { path = "../keyroost-openpgp", version = "0.7.2" }
keyroost-piv = { path = "../keyroost-piv", version = "0.7.2" }
keyroost-token2otp = { path = "../keyroost-token2otp", version = "0.7.2" }
keyroost-token2prog = { path = "../keyroost-token2prog", version = "0.7.2" }
keyroost-hid = { path = "../keyroost-hid", version = "0.7.2" }
# For the CtapTransport trait — the PC/SC CTAP backend (NFC + contact readers)
# implements it so FIDO2 commands can run over a smart-card reader, not just USB-HID.
keyroost-ctap = { path = "../keyroost-ctap", version = "0.7.2" }
pcsc = "2"
# hidapi backs the Token2 OTP USB-HID transport on macOS / Windows; Linux uses
# the dependency-free hidraw `File` path (same split as keyroost-ctap). Optional
# + cfg-gated so a default Linux build pulls nothing extra.
hidapi = { version = "2.6", optional = true, default-features = false, features = [
    "linux-static-hidraw",
    "macos-shared-device",
    "windows-native",
] }
# Scoped crypto exception (same reasoning as keyroost-ctap's aes/sha2 and
# keyroost-rsakey's rsa): PIV card-management-key authentication is a
# block-cipher witness/challenge round. AES (the 5.7+ default) and 3DES
# (older keys) ECB single-block encrypt/decrypt are not worth hand-rolling
# and getting subtly wrong; getrandom supplies the host challenge.
aes = { version = "0.8", default-features = false, features = ["zeroize"] }
des = { version = "0.8", default-features = false, features = ["zeroize"] }
cipher = { version = "0.4", default-features = false }
getrandom = "0.2"
# Wipe PIN/PUK/management-key APDU bodies after transmit (the same hygiene the
# CLI and importers already apply to their secret buffers).
zeroize = "1"

[features]
# Forces the hidapi backend on Linux for building/testing the Token2 OTP USB-HID
# transport there; the default Linux build uses the dependency-free hidraw path.
hidapi-backend = ["dep:hidapi", "keyroost-hid/hidapi-backend"]

# Auto-select the hidapi I/O backend on macOS / Windows for the Token2 OTP HID
# transport (Linux keeps the dependency-free hidraw File backend).
[target.'cfg(not(target_os = "linux"))'.dependencies]
hidapi = { version = "2.6", default-features = false, features = [
    "macos-shared-device",
    "windows-native",
] }
