[package]
name = "keyroost"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Desktop GUI for programming Token2 Molto2 / Molto2v2 TOTP tokens."

[lints]
workspace = true

[[bin]]
name = "keyroost"
path = "src/main.rs"

[dependencies]
keyroost-proto = { path = "../keyroost-proto", version = "0.6.0" }
keyroost-transport = { path = "../keyroost-transport", version = "0.6.0" }
keyroost-token2otp = { path = "../keyroost-token2otp", version = "0.6.0" }
keyroost-piv = { path = "../keyroost-piv", version = "0.6.0" }
keyroost-hid = { path = "../keyroost-hid", version = "0.6.0" }
keyroost-ctap = { path = "../keyroost-ctap", version = "0.6.0" }
keyroost-keyring = { path = "../keyroost-keyring", version = "0.6.0" }
keyroost-resolve = { path = "../keyroost-resolve", version = "0.6.0" }
keyroost-oath = { path = "../keyroost-oath", version = "0.6.0" }
keyroost-qr = { path = "../keyroost-qr", version = "0.6.0" }
keyroost-import = { path = "../keyroost-import", version = "0.6.0", features = ["bulk", "encrypted"] }
# Host-side RSA keygen / key-file loading for OpenPGP on-card import (shared with
# keyroostctl). Owns the scoped `rsa` dependency exception.
keyroost-rsakey = { path = "../keyroost-rsakey", version = "0.6.0" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
# Already in the tree via eframe/egui-winit's clipboard integration; direct
# use lets the OTP auto-clear check the clipboard still holds *our* code
# before wiping it, instead of clobbering whatever the user copied since.
arboard = { version = "3", default-features = false }
# Same scoped exception as the rest of the workspace (already in the tree
# via keyroost-import): wipe seed-bearing buffers on drop.
zeroize = { version = "1", default-features = false, features = ["alloc"] }
# FIDO Metadata Service (MDS) support: decode the bundled/refreshed metadata
# projection and the vendor icon PNGs. serde_json + base64 are already in the
# tree; png is a small, focused decoder (no full `image` crate pulled in).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = { version = "0.22", default-features = false, features = ["std"] }
png = "0.18"

# cargo-binstall support: `cargo binstall` fetches the existing attested
# GitHub release archives (same artifacts, same SHA256SUMS/provenance)
# instead of compiling. Targets without a prebuilt archive fall back to a
# source build automatically.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/keyroost-v{ version }-linux-x86_64{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/keyroost-v{ version }-macos-universal2{ archive-suffix }"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/keyroost-v{ version }-macos-universal2{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/keyroost-v{ version }-windows-x86_64{ archive-suffix }"
pkg-fmt = "zip"
