[package]
name = "keyroost"
version.workspace = true
edition.workspace = true
# This GUI crate's real MSRV floor is higher than the rest of the workspace:
# eframe / egui 0.35 require Rust 1.92. The libraries and the CLI keep the lower
# workspace MSRV (1.85), so this is pinned per-crate instead of inherited.
rust-version = "1.92"
license.workspace = true
repository.workspace = true
description = "Desktop GUI for programming Token2 Molto2 / Molto2v2 TOTP tokens."

[lints]
workspace = true

[[bin]]
name = "keyroost"
path = "src/main.rs"

[dependencies]
keyroost-proto = { path = "../keyroost-proto", version = "0.7.4" }
keyroost-transport = { path = "../keyroost-transport", version = "0.7.4" }
keyroost-token2prog = { path = "../keyroost-token2prog", version = "0.7.4" }
keyroost-token2otp = { path = "../keyroost-token2otp", version = "0.7.4" }
keyroost-piv = { path = "../keyroost-piv", version = "0.7.4" }
keyroost-hid = { path = "../keyroost-hid", version = "0.7.4" }
keyroost-ctap = { path = "../keyroost-ctap", version = "0.7.4" }
keyroost-keyring = { path = "../keyroost-keyring", version = "0.7.4" }
keyroost-resolve = { path = "../keyroost-resolve", version = "0.7.4" }
keyroost-oath = { path = "../keyroost-oath", version = "0.7.4" }
keyroost-qr = { path = "../keyroost-qr", version = "0.7.4" }
keyroost-import = { path = "../keyroost-import", version = "0.7.4", features = ["bulk", "encrypted"] }
# Host-side RSA keygen / key-file loading for OpenPGP on-card import (shared with
# keyroostctl). Owns the scoped `rsa` dependency exception.
keyroost-rsakey = { path = "../keyroost-rsakey", version = "0.7.4" }
# Windows-only helper for the non-admin FIDO2 path: detect a FIDO key, open
# Windows' security-key settings, and relaunch elevated. Inert on other platforms.
keyroost-winwebauthn = { path = "../keyroost-winwebauthn", version = "0.7.4" }
# Windows-only GDI screen capture for QR-from-screen; its unsafe FFI is isolated
# in that crate so this one keeps forbid(unsafe_code). Inert (no deps) off Windows.
keyroost-screengrab = { path = "../keyroost-screengrab", version = "0.7.4" }
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.35"
# Already in the tree via eframe/egui-winit's clipboard integration; direct
# use lets the OTP auto-clear check the clipboard still holds *our* code
# before wiping it, instead of clobbering whatever the user copied since.
arboard = { version = "3", default-features = false }
# Same scoped exception as the rest of the workspace (already in the tree
# via keyroost-import): wipe seed-bearing buffers on drop.
zeroize = { version = "1", default-features = false, features = ["alloc"] }
# FIDO Metadata Service (MDS) support: decode the bundled/refreshed metadata
# projection and the vendor icon PNGs. serde_json + base64 are already in the
# tree; png is a small, focused decoder (no full `image` crate pulled in).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = { version = "0.22", default-features = false, features = ["std"] }
png = "0.18"
# Native file-chooser dialogs (Browse… / Save…) for the path inputs in the
# PIV and OpenPGP panes. The xdg-portal backend talks to the desktop portal
# over the wire eframe already speaks — no GTK, no zbus, no ashpd pulled in.
# The portal API is async, so dialogs run on a helper thread (see the
# `pending_file` plumbing in main.rs) and never block the egui frame loop.
rfd = { version = "0.17", default-features = false, features = ["xdg-portal", "wayland"] }
# Tiny pure-Rust executor used only to drive rfd's async portal dialogs to
# completion on a throwaway helper thread. Already in the tree via rfd; declared
# directly so `pollster::block_on` is callable.
pollster = "0.4"

# QR-from-screen (optional; `--features qr`): a lightweight, STILL-only screen
# grab that keeps the one-click UX without a video-capture stack. Decoding
# reuses keyroost-qr (already a dependency); only the capture backend is new,
# per platform (see src/screengrab.rs):
#   Linux X11     -> x11rb root GetImage (already in the tree via winit)
#   Linux Wayland -> xdg-desktop-portal Screenshot via ashpd (pure Rust; adds the
#                    zbus stack but NO system -dev libraries and no pipewire)
#   macOS         -> the built-in `screencapture` binary (no crate)
#   Windows       -> GDI BitBlt via the keyroost-screengrab crate (always a dep)
# This deliberately replaces `xcap`, whose Linux backend dragged in a whole
# screencast stack (pipewire, gbm, drm, egl + 5 system -dev packages) to grab a
# single frame. (ashpd needs Rust 1.92 — but so does this GUI crate via egui 0.35,
# so `qr` adds no MSRV burden beyond the crate's own rust-version above.)
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", optional = true }
# `screenshot` is the portal we use; `async-io` drives it on zbus's async-io
# runtime (no tokio), which `pollster::block_on` can run. `trash` is only here to
# work around an ashpd 0.13.12 bug: its `screenshot` feature references
# `serde_repr` without pulling it, and `trash` is the lightest feature that does.
ashpd = { version = "0.13", default-features = false, features = ["async-io", "screenshot", "trash"], optional = true }

[features]
# Scan a TOTP QR shown on screen to fill a seed/profile form. Adds only the
# per-platform still-capture backend; decoding/parsing are already in the tree.
# Linux uses x11rb/ashpd; macOS shells out to `screencapture`; Windows uses the
# always-present keyroost-screengrab crate.
qr = ["dep:x11rb", "dep:ashpd"]

# cargo-binstall support: `cargo binstall` fetches the existing attested
# GitHub release archives (same artifacts, same SHA256SUMS/provenance)
# instead of compiling. Targets without a prebuilt archive fall back to a
# source build automatically.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/keyroost-v{ version }-linux-x86_64{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/keyroost-v{ version }-macos-universal2{ archive-suffix }"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/keyroost-v{ version }-macos-universal2{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/keyroost-v{ version }-windows-x86_64{ archive-suffix }"
pkg-fmt = "zip"
