[package]
name = "molto2-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "otpauth:// URI parsing and bulk-import helpers for Molto2 programming."

[lints]
workspace = true

[features]
default = []
# Adds Aegis / 2FAS / Authy JSON parsers (pulls in serde + serde_json).
bulk = ["dep:serde", "dep:serde_json"]
# Adds Aegis encrypted-vault decryption (pulls in scrypt + aes-gcm + base64).
# Implies `bulk`.
encrypted = ["bulk", "dep:scrypt", "dep:aes-gcm", "dep:base64"]

[dependencies]
molto2-proto = { path = "../molto2-proto", version = "0.1.0" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
scrypt = { version = "0.11", default-features = false, features = ["std"], optional = true }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"], optional = true }
base64 = { version = "0.22", default-features = false, features = ["std"], optional = true }
