[package]
name = "molto2-openpgp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenPGP Card (v3.4) APDU command/response layer."

[lints]
workspace = true

[dependencies]
molto2-proto = { path = "../molto2-proto", version = "0.1.0" }
