[package]
name = "moltoui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Desktop GUI for programming Token2 Molto2 / Molto2v2 TOTP tokens."

[lints]
workspace = true

[[bin]]
name = "moltoui"
path = "src/main.rs"

[dependencies]
molto2-proto = { path = "../molto2-proto", version = "0.1.0" }
molto2-transport = { path = "../molto2-transport", version = "0.1.0" }
molto2-hid = { path = "../molto2-hid", version = "0.1.0" }
molto2-ctap = { path = "../molto2-ctap", version = "0.1.0" }
molto2-import = { path = "../molto2-import", version = "0.1.0", features = ["bulk", "encrypted"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
